[package]
name = "bnm-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive", "env"] }
chrono = { version = "0.4" }
color-eyre = "0.6"
csv = "1.1"
env_logger = "0.9"
eyre = "0.6"
futures = "0.3"
lazy_static = "1.4.0"
log = "0.4"
regex = "1"
reqwest = { version = "0.11", features = ["rustls-tls"], default_features = false }
tokio = { version = "1", features = ["full"] }
